--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,7 +3,8 @@ name: Build & Publish Docker Container
 on:
   push:
     branches:
-      - 'master'
+      - 'main'
+      - 'dev'
 
 jobs:
   docker:
