--- a/package.json
+++ b/package.json
@@ -1,30 +1,36 @@
 {
+  "name": "wappalyzer",
+  "description": "Identify technology on websites",
+  "homepage": "https://www.wappalyzer.com",
+  "version": "5.9.32",
+  "author": "Wappalyzer",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/aliasio/wappalyzer"
+  },
+  "funding": {
+    "url": "https://github.com/sponsors/aliasio"
+  },
+  "main": "index.js",
+  "files": [
+    "apps.json",
+    "browser.js",
+    "browsers/zombie.js",
+    "browsers/puppeteer.js",
+    "cli.js",
+    "driver.js",
+    "index.js",
+    "wappalyzer.js"
+  ],
+  "bin": {
+    "wappalyzer": "./cli.js"
+  },
   "dependencies": {
-    "@prantlf/jsonlint": "^10.2.0",
-    "adm-zip": "^0.4.16",
-    "convert-svg-to-png": "^0.5.0"
+    "cld": "^2.6.0",
+    "zombie": "^6.1.4"
   },
-  "devDependencies": {
-    "@nuxtjs/eslint-config": "^3.1.0",
-    "@nuxtjs/eslint-module": "^2.0.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.13.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-json": "^2.1.2",
-    "eslint-plugin-nuxt": "^1.0.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "prettier": "^2.1.2",
-    "terminal-overwrite": "^2.0.1"
-  },
-  "scripts": {
-    "link": "node ./bin/link.js; node ./bin/manifest.js v3",
-    "lint": "eslint src/**/*.{js,json}",
-    "lint:fix": "eslint --fix src/**/*.{js,json}",
-    "validate": "yarn run lint && jsonlint -qV ./schema.json ./src/technologies/ && node ./bin/validate.js",
-    "convert": "node --no-warnings ./bin/convert.js",
-    "prettify": "jsonlint -si --trim-trailing-commas --enforce-double-quotes ./src/categories.json ./src/technologies/*.json",
-    "build": "yarn run link && yarn run validate && yarn run prettify && yarn run convert && node ./bin/build.js",
-    "build:safari": "xcrun safari-web-extension-converter --swift --project-location build --force src/drivers/webextension",
-    "manifest": "node ./bin/manifest.js"
+  "peerDependencies": {
+    "puppeteer": "^2.0.0"
   }
 }
